--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "forever": "^0.15.3",
     "javascript-time-ago": "^2.0.1",
     "jquery": "^3.4.1",
+    "log-to-file": "^2.0.2",
     "morgan": "^1.9.1",
     "node-crc": "^1.2.2",
     "node-forge": "^0.7.6",
@@ -28,7 +29,8 @@
     "socket-io": "^1.0.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "timeago.js": "^4.0.0-beta.2"
+    "timeago.js": "^4.0.0-beta.2",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {},
   "scripts": {
