los sockets rebotan

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "javascript-time-ago": "^2.0.1",
     "jquery": "^3.4.1",
     "log-to-file": "^2.0.2",
+    "moment": "^2.27.0",
     "morgan": "^1.9.1",
     "node-crc": "^1.2.2",
+    "node-fetch": "^2.6.0",
     "node-forge": "^0.7.6",
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
