--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "primes": "^0.0.1",
+    "public-ip": "^4.0.3",
     "serialport": "^7.0.2",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
@@ -35,8 +36,10 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "start": "pm2 start src/server.js",
+    "dev": "nodemon src/server.js",
+    "dev2": "forever src/server.js"
+
   },
   "author": "edgar fernando soarez arteta",
   "license": "ISC"
